# agent-mailer

./: .env.feishu.example  .gitignore  Dockerfile  PLAN.md  README.md  README_CN.md  SETUP.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run.sh
.claude/commands/: check-inbox.md  forward.md  list-agents.md  reply.md  send.md  work-on-task.md
.claude/skills/agentjoinchat/: SKILL.md
.claude/skills/agentstartchat/: SKILL.md
TASK-DONE/: 01-project-init.md  02-database.md  03-agent-register.md  04-send-message.md  05-inbox-and-thread.md  06-integration-test.md
amp-team/: README.md  package-lock.json  package.json
amp-team/src/: broker.js  init.js  scripts.js
amp-team/src/templates/: inbox.js
amp-team/test/: smoke.js
docs/: chat-skills-setup.md  team-init.md
src/agent_mailer/: auth.py  bootstrap.py  cli.py  config.py  db.py  dependencies.py  main.py  models.py
src/agent_mailer/feishu/: __init__.py  bridge.py  broker_client.py  config.py  feishu_client.py  state.py
src/agent_mailer/routes/: admin.py  agents.py  channels.py  me_agents.py  memories.py  messages.py  superadmin.py  teams.py  users.py
src/agent_mailer/services/: messaging.py
src/agent_mailer/static/: index.html  splash.html  styles.css
src/agent_mailer/static/js/: api.js  auth.js  channels.js  events.js  helpers.js  i18n.js  sidebar.js  tags.js  teams.js  theme.js  views.js
src/agent_mailer/static/seo/: ai.txt  humans.txt  llms-full.txt  llms.txt  robots.txt  sitemap.xml
src/agent_mailer/static/seo/.well-known/: ai-plugin.json  security.txt
src/agent_mailer_cli/: team_setup.py
src/agent_mailer_cli/commands/: team_init_cmd.py
tests/: conftest.py  test_admin.py  test_admin_multitenancy.py  test_agents.py  test_auth.py  test_channels.py  test_cli.py  test_db.py  test_e2e.py  test_feishu_bridge.py  test_health.py  test_me_agents.py  test_messages.py  test_multitenancy.py  test_setup.py  test_teams.py  test_users.py
tests/agent_mailer_cli/: test_chat_skills.py  test_team_init.py
zudui/: .gitignore  README.md  package-lock.json  package.json
zudui/src/: empty-dir.js  init.js  scripts.js  slug.js
zudui/src/templates/: inbox.js
zudui/test/: smoke.js
